[gd_scene load_steps=30 format=3 uid="uid://dwup7gne6al1j"]

[ext_resource type="Script" path="res://scripts/scenes/scene_7.gd" id="1_j5m7a"]
[ext_resource type="TileSet" uid="uid://cskc25vgsk8of" path="res://tileset/scene_1.tres" id="1_k6fm7"]
[ext_resource type="PackedScene" uid="uid://sbmrem55ogmf" path="res://scenes/det/cosmosik_bg.tscn" id="2_74yii"]
[ext_resource type="PackedScene" uid="uid://baookqg7m0thr" path="res://dialogues/character_scene/Elsbeth.tscn" id="2_c8rpx"]
[ext_resource type="PackedScene" uid="uid://d2dveldbar2k6" path="res://player/player.tscn" id="3_3goap"]
[ext_resource type="PackedScene" uid="uid://bmi124stonttk" path="res://dialogues/character_scene/Giles.tscn" id="3_vjta4"]
[ext_resource type="Texture2D" uid="uid://cjdxe72jb3c4f" path="res://art/portal/portal.png" id="5_8mgtr"]
[ext_resource type="Texture2D" uid="uid://ch2dn5d73vt0g" path="res://art/portal/portal_2.png" id="6_4fw1f"]
[ext_resource type="PackedScene" uid="uid://c5ciil2026wet" path="res://scenes/pause_menu/pause_menu.tscn" id="7_uxcem"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_irnfv"]
size = Vector2(19, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfu0t"]
atlas = ExtResource("5_8mgtr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqoys"]
atlas = ExtResource("5_8mgtr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nq1gn"]
atlas = ExtResource("5_8mgtr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_re5du"]
atlas = ExtResource("5_8mgtr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1bhd"]
atlas = ExtResource("5_8mgtr")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0qw3"]
atlas = ExtResource("5_8mgtr")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_do7ay"]
atlas = ExtResource("6_4fw1f")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7uy1w"]
atlas = ExtResource("6_4fw1f")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_msloa"]
atlas = ExtResource("6_4fw1f")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nasxu"]
atlas = ExtResource("6_4fw1f")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dncod"]
atlas = ExtResource("6_4fw1f")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptcxy"]
atlas = ExtResource("6_4fw1f")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_weuf1"]
atlas = ExtResource("5_8mgtr")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3h0nf"]
atlas = ExtResource("5_8mgtr")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ox03b"]
atlas = ExtResource("5_8mgtr")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_65aj5"]
atlas = ExtResource("5_8mgtr")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2s7q1"]
atlas = ExtResource("5_8mgtr")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx8rl"]
atlas = ExtResource("5_8mgtr")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_hcyyt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfu0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqoys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nq1gn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_re5du")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1bhd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0qw3")
}],
"loop": true,
"name": &"anf_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_do7ay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uy1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msloa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nasxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dncod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptcxy")
}],
"loop": true,
"name": &"anf_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_weuf1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3h0nf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox03b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65aj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2s7q1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx8rl")
}],
"loop": true,
"name": &"prof",
"speed": 5.0
}]

[node name="scene_7" type="Node2D"]
script = ExtResource("1_j5m7a")

[node name="Elsbeth" parent="." instance=ExtResource("2_c8rpx")]

[node name="Giles" parent="." instance=ExtResource("3_vjta4")]

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(223, 5)
tile_set = ExtResource("1_k6fm7")
format = 2
layer_0/tile_data = PackedInt32Array(65533, 2, 3, 65534, 2, 3, 65535, 2, 3, 0, 2, 3, 1, 2, 3, 2, 2, 3, 3, 2, 3, 4, 2, 3, 5, 2, 3, 6, 2, 3, -65533, 2, 3, -131069, 2, 3, -196605, 2, 3, 65536, 2, 3, 131072, 2, 3, 7, 2, 1, 131073, 2, 1, -196604, 2, 1, -131068, 2, 1, -3, 1, 3, -2, 1, 3, -1, 1, 3, -65536, 1, 3, -65535, 1, 3, -262141, 1, 3, -65531, 1, 3, -65530, 1, 3, 131069, 1, 4, 131070, 1, 4, 65538, 1, 4, 65539, 1, 4, 65540, 1, 4, 65541, 1, 4, 65542, 1, 4, 65532, 1, 1, -196606, 1, 1, -131070, 1, 1, 65537, 0, 0, -65532, 0, 1, 131071, 0, 2, -65534, 0, 3, -262142, 1, 0, -4, 1, 0, 131068, 1, 2, 262143, 1, 2, 65543, 2, 2, -262140, 2, 0, -65529, 2, 0, 196609, 2, 2, 196608, 1, 4, 196607, 1, 1)

[node name="ParallaxBackground" parent="." instance=ExtResource("2_74yii")]
scroll_offset = Vector2(629.196, 414.915)

[node name="player" parent="." instance=ExtResource("3_3goap")]
position = Vector2(282, 11)

[node name="Camera2D" type="Camera2D" parent="player"]
zoom = Vector2(2, 2)
limit_left = -25
limit_top = -225
limit_right = 575
limit_bottom = 225
position_smoothing_enabled = true
position_smoothing_speed = 7.0

[node name="7_5" type="Area2D" parent="."]
position = Vector2(137, 18)

[node name="CollisionShape2D" type="CollisionShape2D" parent="7_5"]
position = Vector2(-0.5, 1.5)
shape = SubResource("RectangleShape2D_irnfv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="7_5"]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_hcyyt")
animation = &"anf_right"
autoplay = "anf_right"

[node name="7_8" type="Area2D" parent="."]
position = Vector2(239, 103)
scale = Vector2(0.9, 0.9)

[node name="CollisionShape2D" type="CollisionShape2D" parent="7_8"]
position = Vector2(-0.5, 1.5)
shape = SubResource("RectangleShape2D_irnfv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="7_8"]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_hcyyt")
animation = &"prof"
autoplay = "prof"

[node name="7_9" type="Area2D" parent="."]
position = Vector2(334, -97)
scale = Vector2(0.9, 0.9)

[node name="CollisionShape2D" type="CollisionShape2D" parent="7_9"]
position = Vector2(-0.5, 1.5)
shape = SubResource("RectangleShape2D_irnfv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="7_9"]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_hcyyt")
animation = &"prof"
autoplay = "prof"

[node name="PauseMenu" parent="." instance=ExtResource("7_uxcem")]

[connection signal="body_entered" from="7_5" to="." method="_on__5_body_entered"]
[connection signal="body_entered" from="7_8" to="." method="_on__8_body_entered"]
[connection signal="body_entered" from="7_9" to="." method="_on__9_body_entered"]
